<resources>
    <string name="app_name">Hack4cause</string>
    <string name="organising_chapter"> A hackathon conducted by <b>IEEE SSIT</b></string>
    <string name="signup"><b>Sign Up</b></string>
    <string name="login"><b>Login</b></string>
    <string name="name">Name</string>
    <string name="vit_e_mail">VIT e-mail address</string>
    <string name="phone">Phone Number</string>
    <string name="reg_no">Registration Number</string>
    <string name="h_add">Hostel address</string>
    <string name="enter_details">Enter your details here:</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_from_vit">* If not from VIT</string>
    <string name="click_here"><b><u>click here</u></b></string>
    <string name="e_mail">E-mail address</string>
    <string name="college">College Name</string>
    <string name="forgot_password"><b>Forgot Password?</b></string>
    <string name="enter_email">Enter your E-mail address</string>
    <string name="reset_password"><b>Reset Password</b></string>
    <string name="title_activity_reg_part">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="tracks">TRACKS</string>
    <string name="technical_domains">TECHNICAL DOMAINS</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="iot">Internet Of Things</string>
    <string name="image_processing">Image Processing</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="healthcare">Healthcare</string>
    <string name="agriculture">Agriculture</string>
    <string name="ai">Artificial Intelligence</string>
    <string name="energy_management">Energy Management</string>
    <string name="security">Security and Surveillance</string>
    <string name="logout">Logout</string>
    <string name="register_team">Register Your Team</string>
    <string name="individual_reg">Register Individually</string>
    <string name="add">Add</string>
    <string name="team_name">Enter Team name</string>
    <string name="enter_n">Enter Name</string>
    <string name="enter_r">Enter Registration No.</string>
    <string name="enter_e">Enter E-mail</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="remove">Remove</string>
</resources>