<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/view_name"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_reg"
        android:layout_width="158dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/reg_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_name" />

    <TextView
        android:id="@+id/view_email"
        android:layout_width="162dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_reg" />

    <Button
        android:id="@+id/remove_btn"
        style="?android:attr/buttonBarStyle"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_baseline_indeterminate_check_box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toEndOf="@+id/view_reg"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>